--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-remote_theme: pages-themes/hacker@v0.2.0
-plugins: 
-- jekyll-remote-theme
-title: galves46 homepage
-description: Bookmark this to keep an eye on my project updates!
+title: Hacker theme
+description: Hacker is a theme for GitHub Pages.
+show_downloads: true
+google_analytics:
+theme: jekyll-theme-hacker
