--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: _qual homepage
 description: Welcome, let's make the diference.
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
