--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: _qual homepage
+title: galves46.sh
 description: Welcome, let's make the diference.
 show_downloads: false
 google_analytics:
